Cleanup (#120)
* cleanup types

* add full coverage command


Former-commit-id: 2e046c38c94cf6a175ca051c381e23b79dd36b39
